from django.db import models
from django.utils.text import slugify


class Organization(models.Model):
    name = models.CharField("name", max_length=255, unique=True)
    slug = models.SlugField("slug", max_length=255, unique=True)
    is_active = models.BooleanField("active", default=True, db_index=True)
    default_llm_model = models.ForeignKey(
        "ai_summaries.LLMModel",
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name="organizations",
        verbose_name="default LLM model",
        help_text="Default LLM model for this organization's AI generations.",
    )
    created_at = models.DateTimeField("created at", auto_now_add=True)
    updated_at = models.DateTimeField("updated at", auto_now=True)

    class Meta:
        ordering = ["name"]
        verbose_name = "organization"
        verbose_name_plural = "organizations"

    def save(self, *args, **kwargs):
        if not self.slug:
            self.slug = slugify(self.name)
        # Ensure slug uniqueness
        original_slug = self.slug
        counter = 1
        while Organization.objects.filter(slug=self.slug).exclude(pk=self.pk).exists():
            self.slug = f"{original_slug}-{counter}"
            counter += 1
        super().save(*args, **kwargs)

    def __str__(self):
        return self.name
